--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react": "^18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.3.5",
 		"react-error-boundary": "^4.1.2",
 		"react-hook-form": "^7.54.2",
 		"react-router": "^7.0.2",
