--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
+		"@lukemorales/query-key-factory": "^1.3.4",
 		"@nine-thirty-five/material-symbols-react": "^1.14.2",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -24,10 +25,18 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"@schedule-x/calendar": "^2.13.0",
+		"@schedule-x/event-modal": "^2.13.0",
+		"@schedule-x/events-service": "^2.13.0",
+		"@schedule-x/react": "^2.13.0",
+		"@schedule-x/theme-default": "^2.13.0",
+		"@schedule-x/theme-shadcn": "^2.13.0",
 		"@tanstack/react-query": "^5.62.7",
 		"@tanstack/react-query-devtools": "^5.62.7",
+		"@tanstack/react-table": "^8.20.6",
 		"@types/react-router": "^5.1.20",
 		"@types/react-router-dom": "^5.3.3",
+		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
@@ -51,6 +60,7 @@
 	"devDependencies": {
 		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/js": "^9.15.0",
+		"@faker-js/faker": "^9.3.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/node": "^22.10.2",
