feat(calendar): Custom event modal layour

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"@radix-ui/react-toast": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.1.6",
 		"@schedule-x/calendar": "^2.13.0",
+		"@schedule-x/calendar-controls": "^2.13.0",
+		"@schedule-x/current-time": "^2.13.0",
+		"@schedule-x/drag-and-drop": "^2.13.0",
 		"@schedule-x/event-modal": "^2.13.0",
 		"@schedule-x/events-service": "^2.13.0",
 		"@schedule-x/react": "^2.13.0",
