--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@schedule-x/event-modal": "^2.13.0",
 		"@schedule-x/events-service": "^2.13.0",
 		"@schedule-x/react": "^2.13.0",
+		"@schedule-x/scroll-controller": "^2.13.0",
 		"@schedule-x/theme-default": "^2.13.0",
 		"@schedule-x/theme-shadcn": "^2.13.0",
 		"@tanstack/react-query": "^5.62.7",
