--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@hookform/resolvers": "^3.10.0",
 		"@lukemorales/query-key-factory": "^1.3.4",
 		"@nine-thirty-five/material-symbols-react": "^1.14.2",
+		"@radix-ui/react-collapsible": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-label": "^2.1.1",
